M6 - Implement controllers for system administrator interface: the ban non-activated editing admin
git-svn-id: svn+ssh://redwerk.com/home/svn/likelabs@5239 5beb62dc-ff0c-0410-899a-bd8837d9df5a